--- a/wp-content/themes/sky-cargo/src/scss/index.scss
+++ b/wp-content/themes/sky-cargo/src/scss/index.scss
@@ -6,7 +6,14 @@
 // blocks
 @use "blocks/header";
 @use "blocks/main-menu";
+@use "blocks/hero";
+@use "blocks/features";
 
 // ui
 @use "ui/link";
 @use "ui/button";
+
+main {
+    background-color: $background-color;
+    @include text-base;
+}
