--- a/wp-content/themes/sky-cargo/src/scss/variables.scss
+++ b/wp-content/themes/sky-cargo/src/scss/variables.scss
@@ -18,6 +18,7 @@ $weight-bold: 700;
 $weight-extra-bold: 800;
 
 // Шрифты
+$text-xxs:   0.625rem; // 10px
 $text-xs:   0.75rem; // 12px
 $text-sm:   0.875rem; // 14px
 $text-base: 1rem;     // 16px
@@ -29,6 +30,7 @@ $text-4xl:  2.25rem;  // 36px
 $text-large: 2.75rem;   // 44px
 
 $text-sizes: (
+  "xxs":    $text-xxs,
   "xs":    $text-xs,
   "sm":    $text-sm,
   "base":  $text-base,
@@ -50,6 +52,8 @@ $space-xl:  32px;
 $space-xm:  44px;
 $space-xxm: 52px;
 $space-xxl: 64px;
+$space-3xm: 80px;
+$space-3xl: 100px;
 
 // Border
 $radius-sm: 6px; 
