feat: Форма заявок. Отправка. Хранение заявок

--- a/wp-content/themes/sky-cargo/src/scss/index.scss
+++ b/wp-content/themes/sky-cargo/src/scss/index.scss
@@ -10,10 +10,13 @@
 @use "blocks/hero";
 @use "blocks/features";
 @use "blocks/footer-menu";
+@use "blocks/lead-form";
 
 // ui
 @use "ui/link";
 @use "ui/button";
+@use "ui/checkbox";
+@use "ui/input";
 
 body {
     display: flex;
