--- a/wp-content/themes/sky-cargo/src/scss/fonts.scss
+++ b/wp-content/themes/sky-cargo/src/scss/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
+  @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
   font-family: 'Manrope';
-  src: url('../fonts/manrope-variable.woff2') format('woff2');
   font-weight: 200 800;
   font-style: normal;
   font-display: swap;
