--- a/wp-content/themes/sky-cargo/src/scss/ui/button.scss
+++ b/wp-content/themes/sky-cargo/src/scss/ui/button.scss
@@ -13,6 +13,7 @@
 
   background-color: $main-color;
   color: $white;
+  width: max-content;
 
   &:hover {
     background-color: rgba($main-color, 0.9);
