feat: Таблица Тарифов

--- a/wp-content/themes/sky-cargo/src/scss/variables.scss
+++ b/wp-content/themes/sky-cargo/src/scss/variables.scss
@@ -6,6 +6,7 @@ $main-color: #C90C0F;
 $font-color: #212635;
 $white: #FFFFFF;
 $light-grey: #9DA7B4;
+$light-grey-2: #F8F8F8;
 $background-color: #F1F1F1;
 $secondary-color: #212635;
 
