--- a/wp-content/themes/sky-cargo/src/scss/ui/link.scss
+++ b/wp-content/themes/sky-cargo/src/scss/ui/link.scss
@@ -4,11 +4,11 @@
 .link {
     @include text-base;
     font-weight: $weight-regular;
-    color: $white;
+    color: inherit;
     text-decoration: none;
     transition: color 0.3s ease;
 
     &:hover {
-        color: rgba($white, 0.9);
+        opacity: 0.9;
     }
 }
