--- a/wp-content/themes/sky-cargo/src/scss/variables.scss
+++ b/wp-content/themes/sky-cargo/src/scss/variables.scss
@@ -28,6 +28,7 @@ $text-lg:   1.125rem; // 18px
 $text-xl:   1.25rem;  // 20px
 $text-2xl:  1.5rem;   // 24px
 $text-3xl:  1.875rem; // 30px
+$text-4xm:  2rem;  // 32px
 $text-4xl:  2.25rem;  // 36px
 $text-large: 2.75rem;   // 44px
 
@@ -40,6 +41,7 @@ $text-sizes: (
   "xl":    $text-xl,
   "2xl":   $text-2xl,
   "3xl":   $text-3xl,
+  "4xm":   $text-4xm,
   "4xl":   $text-4xl,
   "large": $text-large
 );
