--- a/wp-content/themes/sky-cargo/src/scss/blocks/footer-menu.scss
+++ b/wp-content/themes/sky-cargo/src/scss/blocks/footer-menu.scss
@@ -2,8 +2,32 @@
 @use "../mixins.scss" as *;
 
 .footer-menu {
-  display: flex;
-  column-gap: $space-3xm;
+  @include media-up($breakpoint-xl) {
+    display: flex;
+    column-gap: $space-3xm;
+  }
+
+
+  @include media-down($breakpoint-xl) {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(160px, max-content));
+    column-gap: $space-xxm;
+
+    place-content: space-between;
+    grid-template-areas:
+      "information services"
+      "contacts    services";
+
+    .menu-item:nth-child(1) {
+      grid-area: information;
+    }
+    .menu-item:nth-child(2) {
+      grid-area: services;
+    }
+    .menu-item:nth-child(3) {
+      grid-area: contacts;
+    }
+  }
 
   .menu-item {
     a {
@@ -24,6 +48,12 @@
     display: flex;
     flex-direction: column;
     row-gap: $space-sm;
+
+    @include media-up($breakpoint-xl) {
+      flex-wrap: wrap;
+      column-gap: $space-3xm;
+      max-height: 140px;
+    }
 
     .menu-item {
       a {
