--- a/wp-content/themes/sky-cargo/src/scss/mixins.scss
+++ b/wp-content/themes/sky-cargo/src/scss/mixins.scss
@@ -80,6 +80,10 @@
   @include hide-down($breakpoint-xl);
 }
 
+.hide-sm-down {
+  @include hide-down($breakpoint-sm);
+}
+
 .container {
   width: calc(100% - calc($space-md * 2));
   margin: 0 $space-md;
