--- a/wp-content/themes/sky-cargo/src/scss/variables.scss
+++ b/wp-content/themes/sky-cargo/src/scss/variables.scss
@@ -51,6 +51,7 @@ $space-xxs: 6px;
 $space-sm:  8px;
 $space-s:   12px;
 $space-md:  16px;
+$space-ml:  20px;
 $space-lg:  24px;
 $space-xl:  32px;
 $space-xm:  44px;
