fix: Адаптив: Таблица. Исправил отступ между разделами

--- a/wp-content/themes/sky-cargo/src/scss/blocks/delivery.scss
+++ b/wp-content/themes/sky-cargo/src/scss/blocks/delivery.scss
@@ -5,7 +5,7 @@
   margin: $space-xm auto $space-3xl;
 
     @include media-down($breakpoint-xl) {
-      margin-top: $space-lg;
+      margin: $space-lg auto 0 auto;
     }
 
   &__title {
